--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,7 +11,7 @@ on:
       - "6.x"
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
     steps:
     - name: "Checkout repository"
       uses: "actions/checkout@v2"
@@ -32,7 +32,8 @@ jobs:
           .gradle
         key: "${{ github.run_id }}"
   test:
-    runs-on: ubuntu-latest
+    needs: "build"
+    runs-on: "ubuntu-latest"
     steps:
     - name: "Checkout repository"
       uses: "actions/checkout@v2"
