--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,6 +13,8 @@ jobs:
   build:
     runs-on: "ubuntu-latest"
     steps:
+    - name: Test
+      run: echo ${{ github }}"
     - name: "Checkout repository"
       uses: "actions/checkout@v2"
     - name: "Set up JDK"
