--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
     - name: Test
-      run: "echo ${{ github }}"
+      run: "echo ${{ github.ref }}"
     - name: "Checkout repository"
       uses: "actions/checkout@v2"
     - name: "Set up JDK"
