--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,8 @@ jobs:
           arguments: "check"
       - name: "Gradle release"
         if: contains('refs/heads/master refs/heads/5.x refs/heads/6.x', github.ref)
+        env:
+          ORG_GRADLE_PROJECT_github_token: ${{ secrets.GITHUB_TOKEN }}
         uses: "eskatos/gradle-command-action@v1"
         with:
           gradle-version: "6.5"
