--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,5 @@ pluginClassname = org.elasticsearch.plugin.prometheus.PrometheusExporterPlugin
 pluginDescription = Export Elasticsearch metrics to Prometheus
 
 github_token = secret
-github_owner = vvanholl
+github_owner = bobdaw79
 github_repo = elasticsearch-prometheus-exporter
