--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,6 +12,9 @@ on:
       - "5.x"
       - "6.x"
 
+env:
+  gradle-version: "6.5"
+  java-version: "14"
 jobs:
   build:
     runs-on: "ubuntu-latest"
@@ -21,16 +24,16 @@ jobs:
       - name: "Set up JDK"
         uses: "actions/setup-java@v1"
         with:
-          java-version: 14
+          java-version: "${{ env.java-version }}"
       - name: "Gradle build"
         uses: "eskatos/gradle-command-action@v1"
         with:
-          gradle-version: "6.5"
+          gradle-version: "${{ env.gradle-version }}"
           arguments: "--build-cache assemble"
       - name: "Gradle check"
         uses: "eskatos/gradle-command-action@v1"
         with:
-          gradle-version: "6.5"
+          gradle-version: "${{ env.gradle-version }}"
           arguments: "check"
       - name: "Gradle release"
         if: contains('refs/heads/master refs/heads/5.x refs/heads/6.x', github.ref)
@@ -38,5 +41,5 @@ jobs:
           ORG_GRADLE_PROJECT_github_token: ${{ secrets.GITHUB_TOKEN }}
         uses: "eskatos/gradle-command-action@v1"
         with:
-          gradle-version: "6.5"
+          gradle-version: "${{ env.gradle-version }}"
           arguments: "release"
