--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,7 +39,8 @@ jobs:
       - name: "Gradle release"
         if: contains('refs/heads/master refs/heads/5.x refs/heads/6.x', github.ref)
         env:
-          ORG_GRADLE_PROJECT_github_token: ${{ secrets.GITHUB_TOKEN }}
+          ORG_GRADLE_PROJECT_github_owner: ${{ github.repository_owner }}
+          ORG_GRADLE_PROJECT_github_token: ${{ github.token }}
         uses: "eskatos/gradle-command-action@v1"
         with:
           gradle-version: "${{ env.gradle-version }}"
